traefik/conduit.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: conduit
  namespace: conduit
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: conduit.nautilus.optiputer.net
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8084
