traefik/dhub-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dhub
  namespace: digital-humanities
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: dhub.nautilus.optiputer.net
    http:
      paths:
      - path: /
        backend:
          serviceName: dhub
          servicePort: 8000
