traefik/owncloud-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: owncloud
  namespace: ucsd-edu
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: owncloud.k8s.optiputer.net
    http:
      paths:
      - path: /
        backend:
          serviceName: hardy-quail-owncloud
          servicePort: 80
