traefik/perfsonar-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: perfsonar
  namespace: perfsonar
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: perfsonar.k8s.optiputer.net
    http:
      paths:
      - path: /
        backend:
          serviceName: perfsonar-toolkit
          servicePort: 443
