traefik/portal-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: portal
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: k8s.optiputer.net
    http:
      paths:
      - path: /
        backend:
          serviceName: oidc-auth
          servicePort: 80
